# Globalizer

./: CMakeLists.txt  requirements.txt
.github/workflows/: GlobalizerTest.yml
cmake/: examin_lib.cmake  examin_mpi.cmake  examin_utils.cmake
examples/: SimpleMain.cpp  main.cpp
globalizer/: common.h  solution_result.h  solver.cpp  solver.h
globalizer/evolvent/: evolvent.h
globalizer/evolvent/src/: evolvent.cpp
globalizer/include/: GlobProcess.h  Solver.h  defines.h
globalizer/method/: SearchData.h  SearchInterval.h  SearchIteration.h  TaskFactory.cpp  TaskFactory.h  TreeNode.h  Trial.cpp  Trial.h  TrialFactory.h  baseInterval.h  data.cpp  dual_queue.h  method.cpp  method.h  method_factory.cpp  method_factory.h  method_interface.h  minmaxheap.h  queue.cpp  queue.h  queue_common.h  task.cpp  task.h
globalizer/method/calculation/: CalculationFactory.cpp  CalculationFactory.h  cuda_calculation.cpp  mpi_calculation.cpp  mpi_calculation.h  mpi_calculation_async.cpp  omp_calculation.h
globalizer/method/calculation/include/: InformationForCalculation.h  calculation.h  cuda_calculation.h  mpi_calculation_async.h
globalizer/method/calculation/src/: calculation.cpp  omp_calculation.cpp
globalizer/method/include/: Method.h  SearcDataIterator.h  SearchDataSerializer.h  SearchIntervalFactory.h  SerializeToDashBoard.h
globalizer/method/local_method/: local_method.h
globalizer/method/local_method/src/: local_method.cpp
globalizer/method/src/: Method.cpp  SearchDataSerializer.cpp  SerializeToDashBoard.cpp  dual_queue.cpp
globalizer/output_system/: CMakeLists.txt  messages.cpp  messages.h
globalizer/output_system/include/: output_system.h
globalizer/parameters/: BaseProperty.h  ParameterProperty.h  parameters.cpp  parameters.h  problem.h  property.h  types.h
globalizer/parameters/include/: CombinableBaseParameters.h  Parameters.h  TypedProperty.h  baseParameters.h
globalizer/parameters/src/: Parameters.cpp
globalizer/problem/: ConstrainedProblem.hpp  init_problem.cpp  init_problem.h  problemWithConstraints.h
globalizer/problem/include/: ConstrainedProblemGenerator.hpp  problemPar.hpp  problemWithMulctFunction.h
globalizer/problem/src/: ProblemFromFunctionPointers.cpp
globalizer/src/: GlobProcess.cpp  HDSolver.cpp  Solver.cpp
